@@ -42,7 +42,7 @@ gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
 
-if ![runto abort] then {
+if ![runto abort {allow-pending}] then {
     perror "couldn't run to breakpoint"
     continue
 }
